getCurrentPlayerHandIds_emptyHand_returnsEmptyList passes